examples/types/0214-types-multi-return-name-invalid.sx
// Negative: named return elements are matched to slots BY NAME (any order), so
// a name that matches NO slot, or a slot named MORE THAN ONCE, is a hard error
// (rather than a silent positional mismatch). Missing/extra arity is caught
// separately. Here `c` names no slot and `a` would be duplicated.
#import "modules/std.sx";
bad_unknown :: (n: i32) -> (a: i32, b: i32) {
    return a = n, c = n + 1;   // error: 'c' names no return slot
}
bad_dup :: (n: i32) -> (a: i32, b: i32) {
    return a = n, a = n + 1;   // error: 'a' given more than once
}
main :: () -> i64 {
    x, y := bad_unknown(5);
    p, q := bad_dup(5);
    print("{} {} {} {}\n", x, y, p, q);
    return 0;
}
